<resources>
    <string name="app_name">SmartSchool</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!---->

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_marks">Marks</string>
    <string name="nav_exams">Exams</string>
    <string name="nav_courses">Courses</string>
    <string name="nav_discipline">Discipline</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_timetable">Timetable</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Marks</item>
        <item>Exams</item>
        <item>Courses</item>
        <item>Discipline</item>
        <item>Messages</item>
        <item>Timetable</item>
    </string-array>
    <string name="action_mark_all_read">Mark read</string>
    <string name="action_clear_all">Clear all</string>
    <string name="action_logout">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_inbox">Inbox</string>
</resources>
